force-app/main/default/objects/vlocity_cmt__OrderDiscount__c/fields/vlocity_cmt__DiscountTemplateId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DiscountTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Template</label>
    <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
    <relationshipLabel>Order Discounts</relationshipLabel>
    <relationshipName>OrderDiscounts</relationshipName>
    <type>Lookup</type>
</CustomField>