force-app/main/default/objects/vlocity_cmt__OrderDiscount__c/fields/vlocity_cmt__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Status__c</fullName>
    <description>The status of the discount record. For an Account type discount or a Contract type discount it means that a corresponding AccountDiscount or a ContractDiscount has been created or updated.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Not Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>